--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h2>Akshy Panchal</h2>
             <div>
                 <p>I am a passionate Engineer with degree in Computer Science & Engineering. My very first experience with code was when I first time trying to create a blog page. My struggle to customize those blog pages introduced me to HTML and CSS. Sooner, the exitement of having the power to structure pages on my own sounded amazing and that's when i decided to pursue Web Development.</p>
-                <p>Recently, I have taken up a Full Stack Development program with FACE. I have knowledge of HTML5, CSS, JavaScript, Node.JS, MongoDb and JAVA and Data Structure in JAVA. Rational thought process and goal-oriented planning are my strengths.</p>
+                <p>Recently, I have taken up a Full Stack Development program with Coding Ninjas. I have knowledge of HTML5, CSS, JavaScript, Node.JS, MongoDb and JAVA and Data Structure in JAVA. Rational thought process and goal-oriented planning are my strengths.</p>
                 <p>I am currently on the lookout for a challenging role to build products that make a diffrence.</p>
             </div>
             <a href="https://drive.google.com/file/d/1hv4KsTCaXCDycikm-_WDfm8J0dNNBNS1/view?usp=sharing" target="blanck" class="button">Download My Resume</a>
